# floraqua-backend

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/db/: database_manager.py  models.py
app/db/impl/: mongo_manager.py
app/routes/: nodes.py
app/schemas/: floraqua_node.py
